Added CVE/CVSS tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,9 @@ dependencies = [
 ]
 
 [tool.setuptools.packages.find]
-where = ["."]
+where = ["src"]
+
+[tool.pytest.ini_options]
+addopts = [
+    "--import-mode=importlib",
+]
